aws/cloudformation/sno.yml
AWSTemplateFormatVersion: '2010-09-09'
Transform: 'AWS::LanguageExtensions'
Description: IBM Z and Cloud Modernization Stack SNO
Metadata:
  QuickStartDocumentation:
    EntrypointName: "Parameters for deploying into a new VPC"
    Order: "1"
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: IBM Z and Cloud Modernization Stack configuration
        Parameters:
          - LicenseAgreement
          - APIKey
          - S3BucketName
      - Label:
          default: DNS configuration
        Parameters:
          - DomainName
      - Label:
          default: OpenShift configuration
        Parameters:
          - ClusterName
          - OpenshiftVersion
          - OpenshiftUsername
          - OpenshiftPassword
          - ControlPlaneNodeInstanceType
      - Label:
          default: VPC network configuration
        Parameters:
          - AvailabilityZones
          - VPCCIDR
          - PrivateSubnet1CIDR
          - PublicSubnet1CIDR
          - BootNodeInstanceType
          - BootNodeAccessCIDR
      - Label:
          default: IBM Z and Cloud Modernization Stack Components
        Parameters:
          - ZosCloudBroker
          - ZosConnect
          - WaziDevspaces
          - WaziDevspacesVersion

    ParameterLabels:
      PrivateSubnet1CIDR:
        default: Private subnet 1 CIDR
      PublicSubnet1CIDR:
        default: Public subnet 1 CIDR
      BootNodeInstanceType:
        default: Boot node instance type
      BootNodeAccessCIDR:
        default: Boot node external access CIDR
      VPCCIDR:
        default: Virtual Private Cloud CIDR
      ClusterName:
        default: Cluster name
      S3BucketName:
        default: S3 bucket name
      ControlPlaneNodeInstanceType:
        default: Control Plane node instance type
      DomainName:
        default: Domain name
      AvailabilityZones:
        default: Availability Zones
      OpenshiftVersion:
        default: OpenShift version
      OpenshiftUsername:
        default: OpenShift username
      OpenshiftPassword:
        default: OpenShift password
      LicenseAgreement:
        default: License agreement
      APIKey:
        default: Entitlement API key
      ZosCloudBroker:
        default: Install IBM z/OS Cloud Broker
      ZosConnect:
        default: Install IBM z/OS Connect
      WaziDevspaces:
        default: Install IBM Wazi DevSpaces
      WaziDevspacesVersion:
        default: Version of IBM Wazi DevSpaces 

Parameters:
  AvailabilityZones:
    Description: The list of Availability Zones to use for the subnets in the VPC. The Template uses one or three Availability Zones and preserves the logical order you specify.
    Type: List<AWS::EC2::AvailabilityZone::Name>
    AllowedPattern: ".+"
  PrivateSubnet1CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/19
    Description: The CIDR block for the private subnet located in Availability Zone 1.
    Type: String
  PublicSubnet1CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.128.0/20
    Description: The CIDR block for the public subnet located in Availability Zone 1.
    Type: String
  BootNodeInstanceType:
    Default: t3.xlarge
    AllowedValues:
      - t3.xlarge
      - t3a.xlarge
      - t2.micro
    ConstraintDescription: Must contain valid instance type
    Description: The EC2 Instance type for the bootnode instance that acts as a bastion. 
    Type: String
  BootNodeAccessCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: The CIDR block range that is permitted to access the boot node instance. We recommend that you set this value to a trusted IP range. The value `0.0.0.0/0` permits all IP addresses to access. Additional values can be added post-deployment from the Amazon EC2 console. Reference the Deployment Guide for more details.
    Type: String
  S3BucketName: 
    Description: The name of the S3 bucket containing the RedHat Pull Secret at zmodstack/ocp/pull-secret.json. Deployment logs will also be written to this bucket. Reference the Deployment Guide for more details.
    Type: String
    AllowedPattern: ^[0-9a-z-]*$
    ConstraintDescription: Please Enter the deployment bucket name
  VPCCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/16
    Description: The CIDR block that will be associated to the newly created AWS VPC. This CIDR block SHOULD NOT conflict with existing VPCs in the selected AWS Region. 
    Type: String
  ClusterName:
    Default: ""
    Description: Custom cluster name for kubernetes.io/cluster/tags.
    Type: String
    AllowedPattern: ^[0-9A-Za-z-]*$
  ControlPlaneNodeInstanceType:
    Default: m5.4xlarge
    AllowedValues:
      - m5.6xlarge
      - m5.4xlarge
    ConstraintDescription: Must contain valid instance type
    Description: The EC2 instance type for the OpenShift control plane instances.
    Type: String
  DomainName:
    Description: The FQDN of an Amazon Route 53 registered domain and/or hosted zone. A Route 53 subdomain DNS record will be registed for proper routing to the created OpenShift cluster. Reference the Deployment Guide for more details.
    Type: String
    AllowedPattern: '^([a-z0-9]+(-[a-z0-9]+)*\.)+[a-z]{2,}$'
    ConstraintDescription: Must enter a valid Domain Name
  OpenshiftVersion:
    Description: The OpenShift version that should be deployed. The latest stable version of the selected version will be deployed. 
    Type: String
    Default: "4.13"
    AllowedValues:
      - "4.12"
      - "4.13"
      - "4.14"
  OpenshiftUsername:
    Description: The OpenShift username that will be created as the default cluster-admin. This username will be used to login to the OpenShift Console.
    Type: String
  OpenshiftPassword:
    Description: The OpenShift password for the OpenShift username created. This password will be used to login to the OpenShift Console.
    Type: String
    NoEcho: 'true'
  LicenseAgreement:
    Description: >-
      I have read and agree to the license terms for IBM Z and Cloud Modernization Stack. (https://ibm.biz/z-and-cloud-modernization-stack-license)
    Type: String
    Default: '-'
    AllowedValues:
      - I agree
      - '-'
    ConstraintDescription: must answer 'I agree'
  APIKey:
    Description: The API key for pulling IBM Z and Cloud Modernization Stack product images from the IBM Container Entitled Registry. (cp.icr.io)
    Type: String
    NoEcho: 'true'
  ZosCloudBroker:
    Description: Install IBM z/OS Cloud Broker
    Default: true
    Type: String
    AllowedValues: [true, false]
  ZosConnect:
    Description: Install IBM z/OS Connect
    Default: true
    Type: String
    AllowedValues: [true, false]
  WaziDevspaces:
    Description: Install IBM Wazi DevSpaces
    Default: true
    Type: String
    AllowedValues: [true, false]
  WaziDevspacesVersion:
    Description: Version of Wazi DevSpaces
    Type: String
    Default: "3.x"
    AllowedValues:
      - "3.x"
      - "2.x"

Mappings:
  AWSAMIRegionMap:
    us-east-1:
      BootNodeAmiId: ami-0bc11f21e54e85f01
    us-east-2:
      BootNodeAmiId: ami-09ed350985c60bc04
    us-west-1:
      BootNodeAmiId: ami-0324869512d5f379d
    us-west-2:
      BootNodeAmiId: ami-0047a1b414fb751d2
    ca-central-1:
      BootNodeAmiId: ami-0c3d3a230b9668c02
    eu-central-1:
      BootNodeAmiId: ami-0e7e134863fac4946
    eu-west-1:
      BootNodeAmiId: ami-0f0f1c02e5e4d9d9f
    eu-west-2:
      BootNodeAmiId: ami-035c5dc086849b5de
    eu-west-3:
      BootNodeAmiId: ami-0460bf124812bebfa
    eu-north-1:
      BootNodeAmiId: ami-06a2a41d455060f8b

Rules:
  SubnetsInVPC:
    Assertions:
      - Assert: !EachMemberIn
          - !ValueOfAll
            - AWS::EC2::Subnet::Id
            - VpcId
          - !RefAll AWS::EC2::VPC::Id
        AssertDescription: All subnets must in the VPC

Conditions:
  AcceptLicense: !Equals [!Ref LicenseAgreement, 'I agree']
  WaziDevspacesCheck: !Equals [true, !Ref WaziDevspaces]
  NVirginiaRegionCondition:
    Fn::Equals:
    - Ref: AWS::Region
    - us-east-1

Resources:
  DHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName:
        Fn::If:
        - NVirginiaRegionCondition
        - ec2.internal
        - Fn::Sub: "${AWS::Region}.compute.internal"
      DomainNameServers:
      - AmazonProvidedDNS

  VPC:
    Type: AWS::EC2::VPC
    DependsOn: DHCPOptions
    Properties:
      CidrBlock: !Ref VPCCIDR
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Ref "AWS::StackName"

  VPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VPC
      DhcpOptionsId: !Ref DHCPOptions

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: [VPC, VPCDHCPOptionsAssociation]
    Properties:
      Tags:
      - Key: Name
        Value: !Ref "AWS::StackName"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PrivateSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Ref: AvailabilityZones
      Tags:
      - Key: Name
        Value: Private subnet 1A
      - Key: Network
        Value: Private

  PublicSubnet1:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Ref: AvailabilityZones
      Tags:
      - Key: Name
        Value: Public subnet 1
      - Key: Network
        Value: Public
      MapPublicIpOnLaunch: true

  PrivateSubnet1ARouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: PrivateSubnet1A
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private subnet 1A
      - Key: Network
        Value: Private

  PrivateSubnet1ARoute:
    Type: AWS::EC2::Route
    DependsOn: [VPC, PrivateSubnet1A]
    Properties:
      RouteTableId: !Ref PrivateSubnet1ARouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1

  PrivateSubnet1ARouteTableAssociation:
    DependsOn: [PrivateSubnet1ARoute, NATGateway1]
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1A
      RouteTableId: !Ref PrivateSubnet1ARouteTable

  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: PublicSubnet1
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public Subnets
      - Key: Network
        Value: Public

  PublicSubnetRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    DependsOn: PublicSubnetRoute
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicSubnetRouteTable
  
  NAT1EIP:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  
  NATGateway1:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NAT1EIP
        - AllocationId
      SubnetId: !Ref PublicSubnet1
  
  SecurityGroup:
    DependsOn: [PublicSubnet1RouteTableAssociation, PrivateSubnet1ARouteTableAssociation]
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub "${AWS::StackName}-openshift-vpc"
      GroupDescription: 'Default security group that allows all instances in the VPC to talk to each other over any port and protocol.'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: '0.0.0.0/0'
          FromPort: -1
          ToPort: -1
          IpProtocol: '-1'
      SecurityGroupEgress:
        - CidrIp: '0.0.0.0/0'
          FromPort: -1
          ToPort: -1
          IpProtocol: '-1'

  S3VPCEndpoint:
    DependsOn: SecurityGroup
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action: "*"
          Effect: Allow
          Resource: "*"
          Principal: "*"
      RouteTableIds:
      - Ref: PrivateSubnet1ARouteTable
      ServiceName:
        Fn::Sub: com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC

  KeyPairName:
    Type: 'AWS::EC2::KeyPair'
    DependsOn: S3VPCEndpoint
    Properties:
      KeyName: !Ref ClusterName
      Tags:
        - Key: Name
          Value: !Ref ClusterName
  
  IAMUser:
    Type: 'AWS::IAM::User'
    Properties:
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess
  
  IAMUserAccessKey:
    Type: 'AWS::IAM::AccessKey'
    Properties:
      UserName: !Ref IAMUser
  
  OpenshiftSecret:
    Type: "AWS::SecretsManager::Secret"
    Properties:
      SecretString: !Sub '{"apikey":"${APIKey}", "ocpUsername":"${OpenshiftUsername}", "ocpPassword":"${OpenshiftPassword}"}'

  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Path: /
      Policies:
        - PolicyName: lambda-cleanUpLambda
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ssm:SendCommand
                  - ssm:PutParameter
                  - ssm:GetParameter
                Resource:
                  - '*'
              - Effect: Allow
                Action:
                  - ssm:DeleteParameter
                Resource:
                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/*_CleanupStatus'
              - Effect: Allow
                Action:
                  - logs:FilterLogEvents
                Resource:
                  - '*'

  BootNodeIamRole:
    Type: AWS::IAM::Role
    DependsOn: S3VPCEndpoint
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Effect: "Allow"
          Principal:
            Service:
            - "ec2.amazonaws.com"
          Action:
          - "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - arn:aws:iam::aws:policy/AWSCloudFormationReadOnlyAccess
      Policies:
      - PolicyName: bootnode-policy
        PolicyDocument:
          Version: "2012-10-17"
          Statement:
          - Effect: "Allow"
            Action: "ec2:Describe*"
            Resource: "*"
          - Effect: "Allow"
            Action: "ec2:AttachVolume"
            Resource: "*"
          - Effect: "Allow"
            Action: "ec2:DetachVolume"
            Resource: "*"
          - Effect: "Allow"
            Action: "ec2:CreateTags"
            Resource: "*"
          - Effect: "Allow"
            Action:
            - "secretsmanager:GetSecretValue"
            - "secretsmanager:UpdateSecret"
            Resource:
            - !Ref AWSCredentialSecret
            - !Ref OpenshiftSecret
          - Effect: "Allow"
            Action: "s3:ListBucket"
            Resource: !Sub arn:aws:s3:::${S3BucketName}
          - Effect: "Allow"
            Action: "s3:PutObject"
            Resource: !Sub arn:aws:s3:::${S3BucketName}/*
          - Effect: Allow
            Action:
            - ssm:SendCommand
            - ssm:PutParameter
            - ssm:GetParameter
            Resource:
            - '*'

  OpenshiftURL:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "${AWS::StackName}-OpenshiftURL"
      Type: String
      Value: !Sub "https://console-openshift-console.apps.${ClusterName}.${DomainName}"

  WaziDevspacesURL:
    Type: AWS::SSM::Parameter
    Condition: WaziDevspacesCheck
    Properties:
      Name: !Sub "${AWS::StackName}-WaziDevspacesURL"
      Type: String
      Value: !Sub "https://eclipse-che.apps.${ClusterName}.${DomainName}"

  BootnodeInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
      - Ref: "BootNodeIamRole"

  BootnodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster Bootnode Security Group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref BootNodeAccessCIDR
      - IpProtocol: tcp
        FromPort: 9443
        ToPort: 9443
        CidrIp: !Ref BootNodeAccessCIDR
      SecurityGroupEgress:
      - IpProtocol: "-1"
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

  AWSCredentialSecret:
    Type: "AWS::SecretsManager::Secret"
    Properties:
      SecretString: !Sub
        - '{"aws_secret_access_key":"${IAMUserAccessKey}", "aws_access_key_id":"${IAMUserSecret}"}'
        - {IAMUserAccessKey: !Ref IAMUserAccessKey, IAMUserSecret: !GetAtt [IAMUserAccessKey, SecretAccessKey]}

  BootnodeInstance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          Required:
            - StackPropertiesFile
        StackPropertiesFile:
          files:
            /mnt/destroy.sh:
              content: |
                echo "$1 - Destroy"
                /mnt/openshift/zmodstack-deploy/ocp/ansible/playbooks/installer-workspace/openshift-install destroy cluster --dir=/mnt/openshift/zmodstack-deploy/ocp/ansible/playbooks/installer-workspace --log-level=debug
                aws ssm put-parameter --name $1"_CleanupStatus" --type "String" --value "READY" --overwrite
              mode: '000777'
            /root/.aws/config:
              content: !Sub |
                [default]
                region=${AWS::Region}
            /root/.aws/credentials:
              content:
                !Sub
                - |
                  [default]
                  aws_access_key_id=${IAMUserAccessKey}
                  aws_secret_access_key=${IAMUserSecret}
                -
                  IAMUserAccessKey: !Ref IAMUserAccessKey
                  IAMUserSecret: !GetAtt [IAMUserAccessKey, SecretAccessKey]
    Properties:
      KeyName: !Ref 'KeyPairName'
      ImageId: !FindInMap [AWSAMIRegionMap, !Ref "AWS::Region", BootNodeAmiId]
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 100
            VolumeType: gp2
      IamInstanceProfile: !Ref BootnodeInstanceProfile
      Tags:
        - Key: Name
          Value:
            !Sub
            - "${ClusterName}-bootnode"
            - ClusterName: !Ref ClusterName
      InstanceType: !Ref BootNodeInstanceType
      NetworkInterfaces:
      - GroupSet:
        - !Ref BootnodeSecurityGroup
        AssociatePublicIpAddress: true
        DeviceIndex: '0'
        DeleteOnTermination: true
        SubnetId: !Ref PublicSubnet1
      UserData: !Base64
        Fn::Sub:
          - |
            #!/bin/bash -x

            # Global exports
            export HOME=~
            export InstallCompleteURL='${InstallCompleteHandle}'
            export AWS_REGION=${AWS::Region}
            export AWS_STACKID=${AWS::StackId}
            export AWS_STACKNAME=${AWS::StackName}

            # Add /usr/local/bin to global PATH
            echo "export PATH=$PATH:/usr/local/bin" >> /etc/bashrc
            # Install basic yum pre-reqs
            yum update -y
            yum install -y git wget python38 yum-utils httpd-tools unzip

            # Install AWS v2 CLI
            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
            unzip -u awscliv2.zip -d awscliv2
            ./awscliv2/aws/install
            aws --version

            # Install AWS SSM Agent
            wget https://s3-us-west-1.amazonaws.com/amazon-ssm-us-west-1/latest/linux_amd64/amazon-ssm-agent.rpm
            yum install -y ./amazon-ssm-agent.rpm
            systemctl start amazon-ssm-agent
            systemctl enable amazon-ssm-agent
            rm -f ./amazon-ssm-agent.rpm

            # Tagging the root ebs volume
            AWS_AVAIL_ZONE=$(curl http://169.254.169.254/latest/meta-data/placement/availability-zone)
            AWS_REGION="`echo \"$AWS_AVAIL_ZONE\" | sed 's/[a-z]$//'`"
            AWS_INSTANCE_ID=$(curl http://169.254.169.254/latest/meta-data/instance-id)
            ROOT_VOLUME_IDS=$(aws ec2 describe-instances --region $AWS_REGION --instance-id $AWS_INSTANCE_ID --output text --query Reservations[0].Instances[0].BlockDeviceMappings[0].Ebs.VolumeId)
            aws ec2 create-tags --resources $ROOT_VOLUME_IDS --region $AWS_REGION --tags Key=Name,Value=\"${AWS::StackName}-bootnode-volume\"           
            
            # Prepareing for workspace
            export INSTALLER_HOME=/mnt/openshift
            mkdir -p $INSTALLER_HOME
            export GIT_CLONE_DIR=$INSTALLER_HOME/zmodstack-deploy
            mkdir -p $GIT_CLONE_DIR

            # Clone git repo containing automation scripts for AWS
            git clone --no-checkout -b ce-91 https://github.com/IBM/zmodstack-deploy.git $GIT_CLONE_DIR
            cd $GIT_CLONE_DIR && git sparse-checkout set aws ocp && git checkout @
            source $GIT_CLONE_DIR/aws/scripts/bootnode-bootstrap.sh

            # Begin OCP cluster Installation
            cd $GIT_CLONE_DIR/ocp/ansible/
            aws s3 cp s3://${S3BucketName}/zmodstack/ocp/pull-secret.json ./playbooks/pull-secret
            clustername_lower=$(echo ${ClusterName} | tr '[:upper:]' '[:lower:]')
            JSON_STRING=$(jq -n \
            --arg access_key_id "${IAMUserAccessKey}" \
            --arg secret_access_key "${IAMUserSecret}" \
            --arg region "${AWS::Region}" \
            --arg stack_name "${AWS::StackName}" \
            --arg az "${AZ}" \
            --arg public_ssh_key "`cat /mnt/.ssh/id_rsa.pub`" \
            --arg base_domain "${DomainName}" \
            --arg cluster_name "$clustername_lower" \
            --arg openshift_version "${OpenshiftVersion}" \
            --arg openshift_username "${OpenshiftUsername}" \
            --arg openshift_password "${OpenshiftPassword}" \
            --arg external_registry_password "${APIKey}" \
            --arg accept_license "${LicenseAgreement}" \
            --arg vpc_id "${VPC}" \
            --arg machine_network_cidr "${VPCCIDR}" \
            --arg control_plane_node_subnet1_id "${PublicSubnet1}" \
            --arg computenode_subnet1_id "${PrivateSubnet1A}" \
            --arg vpc_cidr "${VPCCIDR}" \
            --arg availability_zone1 "${AvailabilityZone1}" \
            --arg control_plane_node_instance_type "${ControlPlaneNodeInstanceType}" \
            --arg zoscb ${ZosCloudBroker} \
            --arg zosconnect ${ZosConnect} \
            --arg wazidevspaces ${WaziDevspaces} \
            --arg wazidevspacesversion ${WaziDevspacesVersion} \
            --arg autoscaler "false" \
            --arg sno "true" \
            '{ access_key_id: $access_key_id, secret_access_key: $secret_access_key, region: $region, stack_name: $stack_name, az: $az, machine_network_cidr: $machine_network_cidr, public_ssh_key: $public_ssh_key, base_domain: $base_domain, cluster_name: $cluster_name, openshift_version: $openshift_version, openshift_username: $openshift_username, openshift_password: $openshift_password, external_registry_password: $external_registry_password, accept_license: $accept_license, vpc_id: $vpc_id, co [...]
            printf '%s\n' "$JSON_STRING" > $GIT_CLONE_DIR/ocp/ansible/extravars.json
            pip3 install --user -r $GIT_CLONE_DIR/ocp/ansible/requirements.txt            

            # Run ansible playbooks to install OCP and set cloudformation ecode
            ansible-galaxy collection install -r $GIT_CLONE_DIR/ocp/ansible/requirements.yml
            cd $GIT_CLONE_DIR/ocp/ansible && ansible-playbook playbooks/ocp-install.yaml --extra-vars "@extravars.json" 
            ecode=$?

            # Run ansible playbooks to install IBM Z & Cloud Modernization Stack component/product Operators
            cd $GIT_CLONE_DIR/ocp/ansible && ansible-playbook playbooks/main.yaml --extra-vars "@extravars.json" 

            # Copy values logs to S3
            aws s3 cp /var/log/cloud-init-output.log s3://${S3BucketName}/zmodstack/logs/${AWS::StackName}_cloud-init-output.log
            
            # send completion signal
            ln -s /aws-cfn-bootstrap-2.0/cfnbootstrap /usr/lib/python3.8/site-packages/cfnbootstrap
            cfn-signal --exit-code $ecode --id $AWS_STACKID  --data "See logs at ${S3BucketName}" $InstallCompleteURL
          -
            IAMUserAccessKey: !Ref IAMUserAccessKey
            IAMUserSecret: !GetAtt [IAMUserAccessKey, SecretAccessKey]
            LicenseAgreement: !If [ AcceptLicense, 'accept', 'reject']
            AZ: single_zone
            AvailabilityZone1: !Select [0, !Ref AvailabilityZones]
  
  CleanUpLambda:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: |
          import boto3
          import json
          import cfnresponse
          import os
          import traceback
          import time
          def handler(event, context):
              responseData = {}
              try:
                  print("event_obj:",json.dumps(event))
                  print(event['RequestType'])
                  if event['RequestType'] == 'Delete':
                    print("Run unsubscribe script")
                    ssm = boto3.client('ssm',region_name=os.environ['Region'])
                    instanceID = os.environ['BootNode']
                    stackname = os.environ['StackName']
                    print(instanceID)
                    response = ssm.send_command(Targets=[{"Key":"instanceids","Values":[instanceID]}],
                            DocumentName="AWS-RunShellScript",
                            Parameters={"commands":["/mnt/destroy.sh %s" %(stackname)],
                                        "executionTimeout":["1200"],
                                        "workingDirectory":["/mnt"]},
                            Comment="Execute script in uninstall openshift",
                            TimeoutSeconds=120)
                    print(response)
                    current_status = "WAIT"
                    final_status = "READY"
                    parameterName = stackname+"_CleanupStatus"
                    response = ssm.put_parameter(Name=parameterName,
                           Description="Waiting for CleanupStatus to be READY",
                           Value=current_status,
                           Type='String',
                           Overwrite=True)
                    print(response)
                    while(current_status!=final_status):
                      time.sleep(30)
                      response = ssm.get_parameter(Name=parameterName)
                      parameter = response.get('Parameter')
                      current_status = parameter.get('Value')
                      print(current_status)
                    ssm.delete_parameter(Name=parameterName)
              except Exception as e:
                print(e)
                traceback.print_exc()
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, '')
      Environment:
        Variables:
          Region: !Ref AWS::Region
          BootNode: !Ref BootnodeInstance
          StackName: !Ref AWS::StackName
      Handler: index.handler
      Role: !GetAtt 'LambdaExecutionRole.Arn'
      Runtime: python3.8
      Timeout: 600

  Cleanup :
    Type: Custom::Cleanup
    Properties:
      DependsOn: [BootnodeInstance, CleanUpLambda]
      ServiceToken: !GetAtt 'CleanUpLambda.Arn'

  InstallCompleteHandle:
    Type: AWS::CloudFormation::WaitConditionHandle

  InstallCompleted:
    Type: AWS::CloudFormation::WaitCondition
    Properties:
      Count: 1
      Handle: !Ref InstallCompleteHandle
      Timeout: '7200'

Outputs:
  BootnodeInstanceId:
    Description: Bootnode Instance ID.
    Value: !Ref BootnodeInstance
  BootnodePublicIp:
    Description: The boot node public IP address.
    Value: !GetAtt BootnodeInstance.PublicIp
  OpenshiftConsole:
    Description: The URL for the OpenShift UI.
    Value: !GetAtt OpenshiftURL.Value
  OpenshiftUsername:
    Description: OpenShift username secret.
    Value: !Ref OpenshiftSecret
  OpenshiftPassword:
    Description: OpenShift password secret.
    Value: !Ref OpenshiftSecret
  WaziDevspacesConsole:
    Description: The URL for the Wazi Devspaces UI.
    Condition: WaziDevspacesCheck
    Value: !GetAtt WaziDevspacesURL.Value
